# 2f-model

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini  validate.py
docs/: README.md  mkdocs.yml
docs/.manuals/: metadata.properties
docs/docs/: index.md
docs/docs/stylesheets/: extra.css
docs/docs/validation/: index.md
docs/script/: requirements.txt  validation.py
src/seabass/: __main__.py
src/seabass/core/: model_output_variables.py
src/seabass/core/features/: bands.py  constants.py  detection.py  filterbank.py  loudness.py  modulation.py  spectral.py  spreading.py  utils.py
src/seabass/core/models/: constants.py  mms.py
tests/: requirements.txt
tests/assets/sassec/: reference_mms.csv  reference_mms_est.csv  reference_mms_est_profile.csv
tests/core/: test_movs.py
tests/core/features/: test_utils.py
tests/core/models/: test_mms.py  test_sebass.py
